# terraform-security-run-task-python

./: AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  run_task.py  test_run_task.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
agents/: agents.py
agents/prompts/: security.md
models/: agents_output_sec.py  run_task_handler.py
